src/test/deca/test_compilateur/codegen/invalid/created/objet_non_init_field.ass
	TSTO #5
	BOV pile_pleine
	ADDSP #5
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
; Main program
; Beginning of main instructions:
	LOAD 5(GB), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP -3(LB), R1
	SEQ R0
	RTS
; Classe A
; ---------- Initialisation des champs de A
init.A:
	TSTO #1
	BOV pile_pleine
	PUSH R2
	LOAD -2(LB), R1
	LOAD #0, R0
	STORE R0, 1(R1)
	LOAD #1, R2
	LOAD -2(LB), R1
	STORE R2, 1(R1)
	POP R2
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
dereferencement.null:
	WSTR "Erreur : dereferencement.null"
	WNL
	ERROR
; end main program
